Filter SDP from ICE candidates in case of local ICE candidate filtering https://bugs.webkit.org/show_bug.cgi?id=173120

Patch by Youenn Fablet <youenn@apple.com> on 2017-06-13
Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test.

Adding filtering of local description in getters and createOffer promise.

* Modules/mediastream/MediaEndpointSessionDescription.cpp:
(WebCore::MediaEndpointSessionDescription::toRTCSessionDescription):
* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::createOfferSucceeded):
(WebCore::filterICECandidate):
(WebCore::PeerConnectionBackend::filterSDP):
* Modules/mediastream/PeerConnectionBackend.h:
* Modules/mediastream/RTCSessionDescription.h:
(WebCore::RTCSessionDescription::setSdp):
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp:
(WebCore::LibWebRTCPeerConnectionBackend::currentLocalDescription):
(WebCore::LibWebRTCPeerConnectionBackend::pendingLocalDescription):
(WebCore::LibWebRTCPeerConnectionBackend::localDescription):

Source/WTF:

Adding split helper routine with functor parameter.

* wtf/text/WTFString.cpp:
(WTF::String::split):
* wtf/text/WTFString.h:
(WTF::String::contains):

LayoutTests:

* webrtc/datachannel/filter-ice-candidate.html: Minor clean-up and
adding assertions to ensure that ICE candidates are also filtered out.

Canonical link: https://commits.webkit.org/190162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218168 268f45cc-cd09-0410-ab3c-d52691b4dbfc